Fixed error in course name

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <h3 id="iit-kanpur">IIT Kanpur</h3>
 
 <ul>
-<li>CS698O: Topics in Computer Vision - TA (2016-17 II)</li>
+<li>CS698U: Topics in Computer Vision - TA (2016-17 II)</li>
 <li>ESC101: Introduction to Programming - Tutor (2016-17 II)</li>
 <li>ESC101: Introduction to Programming - Tutor (2016-17 I)</li>
 </ul>
