--- a/index.html
+++ b/index.html
@@ -369,9 +369,17 @@
 <h3 id="iit-kanpur">IIT Kanpur</h3>
 
 <ul>
-<li>CS698U: Topics in Computer Vision - TA (2016-17 II)</li>
-<li>ESC101: Introduction to Programming - Tutor (2016-17 II)</li>
-<li>ESC101: Introduction to Programming - Tutor (2016-17 I)</li>
+<li>CS698U: Topics in Computer Vision (2016-17 II), with <a href="http://www.grvsharma.com">Prof. Gaurav Sharma</a>
+
+<ul>
+<li>Preparation of course material and assignments</li>
+</ul></li>
+<li>ESC101: Introduction to Programming - Tutor (2016-17 II), with <a href="http://www.cse.iitk.ac.in/users/rmittal">Prof. Rajat Mittal</a></li>
+<li>ESC101: Introduction to Programming - Tutor (2016-17 I), with <a href="http://www.cse.iitk.ac.in/users/vinaypn">Prof. Vinay P. Namboodiri</a>
+
+<ul>
+<li>Taking weekly tutorial classes, setting question papers and labs</li>
+</ul></li>
 </ul>
 
       </div>
