Added flickr link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 <p>I&rsquo;m broadly interested in Computer Vision, along with its intersection with NLP. Currently, I&rsquo;m working on Video Action Recognition with <a href="http://www.grvsharma.com">Prof. Gaurav Sharma</a>. Recently, I visited <a href="http://www.cs.toronto.edu/~urtasun/">Prof. Raquel Urtasun</a> and <a href="http://www.cs.toronto.edu/~fidler/">Prof. Sanja Fidler</a> at the University of Toronto, where I worked on visual-semantic embeddings. Previously, I&rsquo;d worked with <a href="http://cse.iitk.ac.in/users/amit/">Prof. Amitabha Mukerjee</a> on Generative models for Robot Motion Planning.</p>
 
-<p>Apart from my academic pursuits, I like to spend my time looking at the world through a camera, playing the guitar or developing any application that could help the community or just automate my work!</p>
+<p>Apart from my academic pursuits, I like to spend my time looking at the world <a href="https://www.flickr.com/photos/124486773@N04/">through a camera</a>, playing the guitar or developing any application that could help the community or just automate my work!</p>
 
 <p>You can find my resume <a href="/pdf/Amlan_Resume.pdf">here</a>.</p>
 
