resources and new resume

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             
             
             <li>
-              <a href="/pdf/Amlan_Resume.pdf">
+              <a href="/resources/Amlan_Resume.pdf">
                 <i class="fa fa-file-pdf-o big-icon"></i>
               </a>
             </li>
@@ -154,7 +154,7 @@
 
 <p>Apart from my academic pursuits, I like to spend my time looking at the world <a href="https://www.flickr.com/photos/124486773@N04/">through a camera</a>, playing the guitar or developing any application that could help the community or just automate my work!</p>
 
-<p>You can find my resume <a href="/pdf/Amlan_Resume.pdf">here</a>.</p>
+<p>You can find my resume <a href="/resources/Amlan_Resume.pdf">here</a>.</p>
 
 
         <div class="row">
