--- a/project/cs698/index.html
+++ b/project/cs698/index.html
@@ -76,7 +76,7 @@
     <h1 itemprop="name">Visual Storytelling</h1>
 
     
-    <a class="btn btn-primary btn-outline" href="#">Go to Project Site</a>
+    <a class="btn btn-primary btn-outline" href="#projects">Go to Project Site</a>
     
 
     <div class="article-style" itemprop="articleBody">
