Image link error fixed -- BaseURL

--- a/publication/adascan/index.html
+++ b/publication/adascan/index.html
@@ -126,7 +126,7 @@
     </div>
 
     
-    <img src="https://amlankar.github.ioimg/adascan.png" class="pub-banner" itemprop="image">
+    <img src="https://amlankar.github.io/img/adascan.png" class="pub-banner" itemprop="image">
     
 
     <h3>Abstract</h3>
