--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
   <div class="pub-list-item" itemscope itemtype="http://schema.org/CreativeWork">
     <div class="pub-authors" itemprop="author">
       
-      <b>Amlan Kar</b>*, Nishant Rai*, Karan Sikka, Gaurav Sharma
+      <b>Amlan Kar</b>*, <a href='https://nishantrai18.github.io'>Nishant Rai</a>*, <a href='http://ksikka.com'>Karan Sikka</a>, <a href='http://grvsharma.com'>Gaurav Sharma</a>
       
     </div>
     <div class="pub-publication">
