Resume Update, AdaScan results

--- a/publication/adascan/index.html
+++ b/publication/adascan/index.html
@@ -234,10 +234,14 @@ year={2016}
 
     <div class="article-style">
 
-<h3 id="b-example-importance-scores-b"><b>Example Importance Scores</b></h3>
+<h3 id="b-results-b"><b>Results</b></h3>
 
-<p><img src="/img/adascan_basketball.png" alt="Example: Basketball (UCF-101)" />
-<img src="/img/adascan_punch.png" alt="Example: Punch (UCF-101)" /></p>
+<p><strong>Note:</strong> References are as in the paper
+<img src="/img/adascan_quan.jpg" alt="Quantitative" /></p>
+
+<h3 id="b-qualitative-results-b"><b>Qualitative Results</b></h3>
+
+<p><img src="/img/adascan_qual.jpg" alt="Qualitative" /></p>
 </div>
 
   </div>
