Correct wrong result figure, add note

--- a/publication/adascan/index.html
+++ b/publication/adascan/index.html
@@ -236,7 +236,7 @@ year={2016}
 
 <h3 id="b-results-b"><b>Results</b></h3>
 
-<p><strong>Note:</strong> References are as in the paper
+<p><strong>Note:</strong> References are as in the paper. There is an error in the table in the paper (Wang et al. [44] results), which has been corrected here.
 <img src="/img/adascan_quan.jpg" alt="Quantitative" /></p>
 
 <h3 id="b-qualitative-results-b"><b>Qualitative Results</b></h3>
