Added posters, linked

--- a/project/cs671/index.html
+++ b/project/cs671/index.html
@@ -78,7 +78,7 @@
     <h1 itemprop="name">Sentiment Classification using Convolutional Neural Networks</h1>
 
     
-    <a class="btn btn-primary btn-outline" href="/pdf/cs671report.pdf">Go to Project Site</a>
+    <a class="btn btn-primary btn-outline" href="/resources/cs671a_poster.pdf">Go to Project Site</a>
     
 
     <div class="article-style" itemprop="articleBody">
