--- a/project/cs676/index.html
+++ b/project/cs676/index.html
@@ -78,7 +78,7 @@
     <h1 itemprop="name">Semantic Attention Models for Visual Question Answering</h1>
 
     
-    <a class="btn btn-primary btn-outline" href="/pdf/cs676report.pdf">Go to Project Site</a>
+    <a class="btn btn-primary btn-outline" href="/resources/cs676a_poster.pdf">Go to Project Site</a>
     
 
     <div class="article-style" itemprop="articleBody">
