--- a/project/cs771/index.html
+++ b/project/cs771/index.html
@@ -78,7 +78,7 @@
     <h1 itemprop="name">Vehicle Detection and Automatic Number Plate Recognition</h1>
 
     
-    <a class="btn btn-primary btn-outline" href="/pdf/cs771report.pdf">Go to Project Site</a>
+    <a class="btn btn-primary btn-outline" href="/resources/cs771report.pdf">Go to Project Site</a>
     
 
     <div class="article-style" itemprop="articleBody">
