--- a/publication/adascan/index.html
+++ b/publication/adascan/index.html
@@ -91,7 +91,7 @@
 
       <p class="pub-authors" itemprop="author" align="center">
         
-        <b>Amlan Kar</b>* (IIT Kanpur), <a href='https://nishantrai18.github.io'>Nishant Rai</a>* (IIT Kanpur), <a href='http://ksikka.com'>Karan Sikka</a> (SRI & UCSD), <a href='http://grvsharma.com'>Gaurav Sharma</a> (IIT Kanpur)
+        <b>Amlan Kar</b>*, <a href='https://nishantrai18.github.io'>Nishant Rai</a>*, <a href='http://ksikka.com'>Karan Sikka</a>, <a href='http://grvsharma.com'>Gaurav Sharma</a>
         
       </p><br>
       <span class="pull-right">
@@ -151,7 +151,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">arXiv report</div>
+          <div class="col-xs-12 col-sm-9">CVPR 2017</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
