Full conf. name

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </div>
     <div class="pub-publication">
       
-      CVPR 2017
+      IEEE Conference on Computer Vision and Pattern Recognition (CVPR), Honolulu, Hawaii, 2017
       
     </div>
     <p>
