--- a/publication/adascan/index.html
+++ b/publication/adascan/index.html
@@ -151,7 +151,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">CVPR 2017</div>
+          <div class="col-xs-12 col-sm-9">IEEE Conference on Computer Vision and Pattern Recognition (CVPR), Honolulu, Hawaii, 2017</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
