Fix from theme fix

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 
                 <span>
     <a href="https://amlankar.github.io/publication/adascan/"> 
-        <img class="pub-img" src="https://amlankar.github.ioimg/adascan.png" >
+        <img class="pub-img" src="https://amlankar.github.io/img/adascan.png" >
         </img>
     </a>
 </span>              
