--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1803.09693.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline btn-xs"
@@ -291,8 +295,20 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=OH4MfeKkSyE">
+  Video
+</a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/davidjesusacu/polyrnn-pp">
+  Code
+</a>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.cs.toronto.edu/polyrnn/">
+  Project
+</a>
 
 
 
