--- a/publication/polyrnnpp/index.html
+++ b/publication/polyrnnpp/index.html
@@ -177,6 +177,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/pdf/1803.09693.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline"
@@ -195,8 +199,20 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://www.youtube.com/watch?v=OH4MfeKkSyE">
+  Video
+</a>
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/davidjesusacu/polyrnn-pp">
+  Code
+</a>
+
+
+
+<a class="btn btn-primary btn-outline" href="http://www.cs.toronto.edu/polyrnn/">
+  Project
+</a>
 
 
 
