--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ onclick="
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=OH4MfeKkSyE">
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=evGqMnL4P3E">
   Video
 </a>
 
@@ -314,9 +314,9 @@ onclick="
 
 
 <pre id = "polyrnnpp_bib", style="display:none">
-@article{acuna2018efficient,
+@inproceedings{AcunaCVPR18,
 title={Efficient Interactive Annotation of Segmentation Datasets with Polygon-RNN++},
-author={Acuna, David and Ling, Huan and Kar, Amlan and Fidler, Sanja},
+author={David Acuna and Huan Ling and Amlan Kar and Sanja Fidler},
 booktitle={CVPR},
 year={2018}
 }
