--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </div>
     <div class="pub-publication">
       
-      NeurIPS ViGIL Workshop 2018
+      NeurIPS 2018, ViGIL Workshop <font color='red'><b>(Oral)</b></font>
       
     </div>
     <p>
