--- a/publication/captionquestions/index.html
+++ b/publication/captionquestions/index.html
@@ -140,7 +140,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">NeurIPS Workshop on Visually Grounded Interaction and Language, 2018</div>
+          <div class="col-xs-12 col-sm-9">NeurIPS 2018 Workshop on Visually Grounded Interaction and Language <font color='red'><b>(Oral)</b></font></div>
         </div>
       </div>
       <div class="col-sm-1"></div>
