CurveGCN links, fix shortnames

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ year={2019}
 
 <a class="btn btn-primary btn-outline btn-xs"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('creativeflow_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -386,7 +386,7 @@ onclick="
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "creativeflow_bib", style="display:none">
 @inproceedings{shugrina2019creative,
 title={Creative Flow+ Dataset},
 author={Maria Shugrina and Ziheng Liand and Amlan Kar and Jiaman Li and Angad Singh and Karan Singh and Sanja Fidler},
@@ -438,11 +438,15 @@ year={2019}
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1903.06874.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline btn-xs"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('curvegcn_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -456,13 +460,21 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=ycD2BtO-QzU">
+  Video
+</a>
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/fidler-lab/curve-gcn">
+  Code
+</a>
 
 
 
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "curvegcn_bib", style="display:none">
 @inproceedings{curvegcn2019,
 title={Fast Interactive Object Annotation with Curve-GCN},
 author={Huan Ling and Jun Gao and Amlan Kar and Wenzheng Chen and Sanja Fidler},
@@ -518,7 +530,7 @@ year={2019}
 
 <a class="btn btn-primary btn-outline btn-xs"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('delse_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -538,7 +550,7 @@ onclick="
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "delse_bib", style="display:none">
 @inproceedings{wang2019delse,
 title={Object Instance Annotation with Deep Extreme Level Set Evolution},
 author={Zian Wang and Huan Ling and David Acuna and Amlan Kar and Sanja Fidler},
