--- a/publication/creativeflow/index.html
+++ b/publication/creativeflow/index.html
@@ -177,7 +177,7 @@
 
 <a class="btn btn-primary btn-outline"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('creativeflow_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -197,7 +197,7 @@ onclick="
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "creativeflow_bib", style="display:none">
 @inproceedings{shugrina2019creative,
 title={Creative Flow+ Dataset},
 author={Maria Shugrina and Ziheng Liand and Amlan Kar and Jiaman Li and Angad Singh and Karan Singh and Sanja Fidler},
