--- a/publication/curvegcn/index.html
+++ b/publication/curvegcn/index.html
@@ -173,11 +173,15 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/pdf/1903.06874.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('curvegcn_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -191,13 +195,21 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://www.youtube.com/watch?v=ycD2BtO-QzU">
+  Video
+</a>
+
+
+<a class="btn btn-primary btn-outline" href="https://github.com/fidler-lab/curve-gcn">
+  Code
+</a>
 
 
 
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "curvegcn_bib", style="display:none">
 @inproceedings{curvegcn2019,
 title={Fast Interactive Object Annotation with Curve-GCN},
 author={Huan Ling and Jun Gao and Amlan Kar and Wenzheng Chen and Sanja Fidler},
