--- a/publication/delse/index.html
+++ b/publication/delse/index.html
@@ -177,7 +177,7 @@
 
 <a class="btn btn-primary btn-outline"
 onclick="
-    var div = document.getElementById('steal_bib');
+    var div = document.getElementById('delse_bib');
     if (div.style.display !== 'none') {
         div.style.display = 'none';
     }
@@ -197,7 +197,7 @@ onclick="
 
 
 
-<pre id = "steal_bib", style="display:none">
+<pre id = "delse_bib", style="display:none">
 @inproceedings{wang2019delse,
 title={Object Instance Annotation with Deep Extreme Level Set Evolution},
 author={Zian Wang and Huan Ling and David Acuna and Amlan Kar and Sanja Fidler},
