--- a/publication/index.html
+++ b/publication/index.html
@@ -139,6 +139,59 @@ onclick="
             <li>
               <i class="fa-li fa fa-file-text-o" aria-hidden="true"
                  style="color:#03396c;font-size:80%;padding-top:6px;"></i>
+              Neural Turtle Graphics for Modeling City Road Layouts
+              <p>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://amlankar.github.io/publication/ntg/">
+  Details
+</a>
+
+
+
+
+<a class="btn btn-primary btn-outline btn-xs"
+onclick="
+    var div = document.getElementById('steal_bib');
+    if (div.style.display !== 'none') {
+        div.style.display = 'none';
+    }
+    else {
+        div.style.display = 'block';
+    }
+">
+  BibTeX
+</a>
+
+
+
+
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://nv-tlabs.github.io/NTG/">
+  Project
+</a>
+
+
+
+
+<pre id = "steal_bib", style="display:none">
+@inproceedings{chu2019ntg,
+ title={Neural Turtle Graphics for Modeling City Road Layouts},
+ author={Chu, Hang and Li, Daiqing and Acuna, David and Kar, Amlan and Shugrina, Maria and Wei, Xinkai and Liu, Ming-Yu and Torralba, Antonio and Fidler, Sanja},
+ booktitle={ICCV},
+ year={2019}
+}
+</pre>
+
+</p>
+            </li>
+            
+            <li>
+              <i class="fa-li fa fa-file-text-o" aria-hidden="true"
+                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
               Learning to Caption Images through a Lifetime by Asking Questions
               <p>
 
@@ -187,55 +240,6 @@ title={Learning to Caption Images through a Lifetime by Asking Questions},
 author={Kevin Shen and Amlan Kar and Sanja Fidler},
 booktitle={ICCV},
 year={2019}
-}
-</pre>
-
-</p>
-            </li>
-            
-            <li>
-              <i class="fa-li fa fa-file-text-o" aria-hidden="true"
-                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
-              Neural Turtle Graphics for Modeling City Road Layouts
-              <p>
-
-
-
-<a class="btn btn-primary btn-outline btn-xs" href="https://amlankar.github.io/publication/ntg/">
-  Details
-</a>
-
-
-
-
-<a class="btn btn-primary btn-outline btn-xs"
-onclick="
-    var div = document.getElementById('steal_bib');
-    if (div.style.display !== 'none') {
-        div.style.display = 'none';
-    }
-    else {
-        div.style.display = 'block';
-    }
-">
-  BibTeX
-</a>
-
-
-
-
-
-
-
-
-
-
-<pre id = "steal_bib", style="display:none">
-@inproceedings{chu2019ntg,
- title={Neural Turtle Graphics for Modeling City Road Layouts},
- author={Chu, Hang and Li, Daiqing and Acuna, David and Kar, Amlan and Shugrina, Maria and Wei, Xinkai and Liu, Ming-Yu and Torralba, Antonio and Fidler, Sanja},
- booktitle={ICCV},
- year={2019}
 }
 </pre>
 
