--- a/404.html
+++ b/404.html
@@ -76,11 +76,19 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/meta-sim/">Meta-Sim: Learning to Generate Synthetic Datasets</a></li>
+    <li><a href="https://amlankar.github.io/publication/detection-relevance/">Learning to Evaluate Perception Models using Planner-Centric Metrics</a></li>
   </ul>
   
   <ul>
     <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/colorsails/">Nonlinear Color Triads for Approximation, Learning and Direct Manipulation of Color Distributions</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/meta-sim/">Meta-Sim: Learning to Generate Synthetic Datasets</a></li>
   </ul>
   
   <ul>
@@ -108,10 +116,6 @@
   </ul>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/colorsails/">Color Sails: Discrete-Continuous Palettes for Deep Color Exploration</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://amlankar.github.io/publication/polyrnnpp/">Efficient Interactive Annotation of Segmentation Datasets with Polygon-RNN&#43;&#43;</a></li>
   </ul>
   
@@ -125,7 +129,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 Amlan Kar &middot; 
+      &copy; 2020 Amlan Kar &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
