miccai, eccv, old updates

--- a/404.html
+++ b/404.html
@@ -76,11 +76,23 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/detection-relevance/">Learning to Evaluate Perception Models using Planner-Centric Metrics</a></li>
+    <li><a href="https://amlankar.github.io/publication/meta-sim2/">Meta-Sim2: Unsupervised Learning of Scene Structure for Synthetic Data Generation</a></li>
   </ul>
   
   <ul>
     <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/interactive3dannot/">Interactive Annotation of 3D Object Geometry using 2D Scribbles</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/fedsim/">Federated Simulation for Medical Imaging</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/detection-relevance/">Learning to Evaluate Perception Models using Planner-Centric Metrics</a></li>
   </ul>
   
   <ul>
