--- a/publication/creativeflow/index.html
+++ b/publication/creativeflow/index.html
@@ -173,6 +173,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://www.cs.toronto.edu/creativeflow/files/2596.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline"
@@ -192,7 +196,15 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/creativefloworg/creativeflow">
+  Code
+</a>
 
+
+
+<a class="btn btn-primary btn-outline" href="https://www.cs.toronto.edu/creativeflow/">
+  Project
+</a>
 
 
 
