--- a/publication/delse/index.html
+++ b/publication/delse/index.html
@@ -173,6 +173,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="http://www.cs.toronto.edu/~zianwang/DELSE/zian19delse.pdf">
+  PDF
+</a>
+
 
 
 <a class="btn btn-primary btn-outline"
@@ -192,7 +196,15 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/fidler-lab/delse/">
+  Code
+</a>
 
+
+
+<a class="btn btn-primary btn-outline" href="http://www.cs.toronto.edu/~zianwang/DELSE/delse.html">
+  Project
+</a>
 
 
 
