--- a/publication/steal/index.html
+++ b/publication/steal/index.html
@@ -196,6 +196,10 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/nv-tlabs/STEAL/">
+  Code
+</a>
+
 
 
 <a class="btn btn-primary btn-outline" href="https://nv-tlabs.github.io/STEAL/">
