--- a/publication/captionquestions/index.html
+++ b/publication/captionquestions/index.html
@@ -196,6 +196,10 @@ onclick="
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/fidler-lab/Caption-Lifetime-by-Asking-Questions">
+  Code
+</a>
+
 
 
 <a class="btn btn-primary btn-outline" href="http://aidemos.cs.toronto.edu/lbaq/">
