--- a/publication/colorsails/index.html
+++ b/publication/colorsails/index.html
@@ -144,7 +144,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">ACM Transactions on Graphics (SIGGRAPH) 2020 (to appear)</div>
+          <div class="col-xs-12 col-sm-9">ACM Transactions on Graphics (SIGGRAPH) 2020</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
@@ -202,7 +202,7 @@ onclick="
 
 
 
-<a class="btn btn-primary btn-outline" href="http://colorsails.com">
+<a class="btn btn-primary btn-outline" href="https://colorsandbox.com/research/triads">
   Project
 </a>
 
