--- a/404.html
+++ b/404.html
@@ -76,11 +76,15 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/meta-sim2/">Meta-Sim2: Unsupervised Learning of Scene Structure for Synthetic Data Generation</a></li>
+    <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
+    <li><a href="https://amlankar.github.io/publication/good-practices-class/">Towards Good Practices for Efficiently Annotating Large-Scale Image Classification Datasets</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/meta-sim2/">Meta-Sim2: Unsupervised Learning of Scene Structure for Synthetic Data Generation</a></li>
   </ul>
   
   <ul>
