add atiss + good-practices + resume update

--- a/404.html
+++ b/404.html
@@ -76,6 +76,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="https://amlankar.github.io/publication/atiss/">ATISS: Autoregressive Transformers for Indoor Scene Synthesis</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
   </ul>
   
