--- a/publication/index.html
+++ b/publication/index.html
@@ -82,6 +82,63 @@
             <li>
               <i class="fa-li fa fa-file-text-o" aria-hidden="true"
                  style="color:#03396c;font-size:80%;padding-top:6px;"></i>
+              ATISS: Autoregressive Transformers for Indoor Scene Synthesis
+              <p>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://amlankar.github.io/publication/atiss/">
+  Details
+</a>
+
+
+
+
+<a class="btn btn-primary btn-outline btn-xs"
+onclick="
+    var div = document.getElementById('atiss_bib');
+    if (div.style.display !== 'none') {
+        div.style.display = 'none';
+    }
+    else {
+        div.style.display = 'block';
+    }
+">
+  BibTeX
+</a>
+
+
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/nv-tlabs/atiss">
+  Code
+</a>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://nv-tlabs.github.io/ATISS/">
+  Project
+</a>
+
+
+
+
+<pre id = "atiss_bib", style="display:none">
+@inproceedings{Paschalidou2021NEURIPS,
+author = {Despoina Paschalidou and Amlan Kar and Maria Shugrina and Karsten Kreis and Andreas Geiger and Sanja Fidler},
+title = {ATISS: Autoregressive Transformers for Indoor Scene Synthesis},
+booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+year = {2021}
+}
+</pre>
+
+</p>
+            </li>
+            
+            <li>
+              <i class="fa-li fa fa-file-text-o" aria-hidden="true"
+                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
               Towards Good Practices for Efficiently Annotating Large-Scale Image Classification Datasets
               <p>
 
