--- a/404.html
+++ b/404.html
@@ -76,11 +76,19 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://amlankar.github.io/publication/atiss/">ATISS: Autoregressive Transformers for Indoor Scene Synthesis</a></li>
+    <li><a href="https://amlankar.github.io/publication/hgca/">Outdoor Scene Extrapolation with Hierarchical Generative Cellular Automata</a></li>
   </ul>
   
   <ul>
     <li><a href="https://amlankar.github.io/publication/">Publications</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/visor/">EPIC-KITCHENS VISOR Benchmark: VIdeo Segmentations and Object Relations</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://amlankar.github.io/publication/atiss/">ATISS: Autoregressive Transformers for Indoor Scene Synthesis</a></li>
   </ul>
   
   <ul>
