fix hgca author list error

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
   <div class="pub-list-item" itemscope itemtype="http://schema.org/CreativeWork">
     <div class="pub-authors" itemprop="author">
       
-      <a href='https://dszhang.me/about'>Dongsu Zhang</a>, <a href='https://www.fwilliams.info/'>Francis Williams</a>, <a href='https://zgojcic.github.io/'>Zan Gojcic</a>, <a href='https://karstenkreis.github.io/'>Karsten Kreis</a>, <a href='http://www.cvlibs.net/'>Andreas Geiger</a>, <a href='http://www.cs.toronto.edu/~fidler/'>Sanja Fidler</a>, <a href='https://3d.snu.ac.kr/'>Young Min Kim</a>, <b>Amlan Kar</b>
+      <a href='https://dszhang.me/about'>Dongsu Zhang</a>, <a href='https://www.fwilliams.info/'>Francis Williams</a>, <a href='https://zgojcic.github.io/'>Zan Gojcic</a>, <a href='https://karstenkreis.github.io/'>Karsten Kreis</a>, <a href='http://www.cs.toronto.edu/~fidler/'>Sanja Fidler</a>, <a href='https://3d.snu.ac.kr/'>Young Min Kim</a>, <b>Amlan Kar</b>
       
     </div>
     <div class="pub-publication">
