--- a/publication/hgca/index.html
+++ b/publication/hgca/index.html
@@ -80,7 +80,7 @@
 
       <p class="pub-authors" itemprop="author" align="center">
         
-        <a href='https://dszhang.me/about'>Dongsu Zhang</a>, <a href='https://www.fwilliams.info/'>Francis Williams</a>, <a href='https://zgojcic.github.io/'>Zan Gojcic</a>, <a href='https://karstenkreis.github.io/'>Karsten Kreis</a>, <a href='http://www.cvlibs.net/'>Andreas Geiger</a>, <a href='http://www.cs.toronto.edu/~fidler/'>Sanja Fidler</a>, <a href='https://3d.snu.ac.kr/'>Young Min Kim</a>, <b>Amlan Kar</b>
+        <a href='https://dszhang.me/about'>Dongsu Zhang</a>, <a href='https://www.fwilliams.info/'>Francis Williams</a>, <a href='https://zgojcic.github.io/'>Zan Gojcic</a>, <a href='https://karstenkreis.github.io/'>Karsten Kreis</a>, <a href='http://www.cs.toronto.edu/~fidler/'>Sanja Fidler</a>, <a href='https://3d.snu.ac.kr/'>Young Min Kim</a>, <b>Amlan Kar</b>
         
       </p><br>
       <span class="pull-right">
