--- a/404.html
+++ b/404.html
@@ -84,6 +84,10 @@
   </ul>
   
   <ul>
+    <li><a href="https://amlankar.github.io/publication/dreamteacher/">DreamTeacher: Pretraining Image Backbones with Deep Generative Models</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://amlankar.github.io/publication/visor/">EPIC-KITCHENS VISOR Benchmark: VIdeo Segmentations and Object Relations</a></li>
   </ul>
   
