--- a/publication/colorsails/index.html
+++ b/publication/colorsails/index.html
@@ -133,7 +133,7 @@
       </div>
 
     
-    <img src="https://amlankar.github.io/img/colorsails.jpg" class="pub-banner" itemprop="image">
+    <img src="https://amlankar.github.io//img/colorsails.jpg" class="pub-banner" itemprop="image">
     
 
     <h3>Abstract</h3>
