--- a/publication/ntg/index.html
+++ b/publication/ntg/index.html
@@ -129,7 +129,7 @@
       </div>
 
     
-    <img src="https://amlankar.github.io/img/ntg.png" class="pub-banner" itemprop="image">
+    <img src="https://amlankar.github.io//img/ntg.png" class="pub-banner" itemprop="image">
     
 
     <h3>Abstract</h3>
