--- a/publication/meta-sim/index.html
+++ b/publication/meta-sim/index.html
@@ -129,7 +129,7 @@
       </div>
 
     
-    <img src="https://amlankar.github.io/img/meta-sim.gif" class="pub-banner" itemprop="image">
+    <img src="https://amlankar.github.io//img/meta-sim.gif" class="pub-banner" itemprop="image">
     
 
     <h3>Abstract</h3>
