--- a/publication/steal/index.html
+++ b/publication/steal/index.html
@@ -129,7 +129,7 @@
       </div>
 
     
-    <img src="https://amlankar.github.io/img/steal.jpg" class="pub-banner" itemprop="image">
+    <img src="https://amlankar.github.io//img/steal.jpg" class="pub-banner" itemprop="image">
     
 
     <h3>Abstract</h3>
